# BARES

./: README.md  author.md
data/: teste01.txt  testepdf2.txt
src/: CMakeLists.txt  CmakeLists.txt
src/build-debug/: CMakeCache.txt  Makefile  bares  cmake_install.cmake  compile_commands.json
src/core/: bares_manager.cpp  bares_manager.h  calculate.cpp  calculate.h  main.cpp  parser.cpp  parser.h
src/libs/: bares_common.cpp  bares_common.h  data_structs.h  messages.cpp  messages.h  tokenizer.cpp  tokenizer.h
